# lib-qdmmg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: requirements.txt
examples/: 01-harmonic-oscillator.py  02-double-quadratic-well.py  03-harmonic-oscillator-properties.py  04-double-quadratic-well-properties.py  05-sinusoidal.py  06-henon-heiles.py  07-coupled-harmonic-oscillator.py  08-harmonic-n2.py  09-dqw-proton-transfer.py  10-lih-molecule.py  11-hof-molecule.py  12-h2of-anion.py  13-h2of2-dianion.py  comp_density.txt  mol_potential_test.py  potential_test.py  pyscf_tests.py  send.sh  send1.sh  send2.sh  test.py  test.tmp  test.txt  test2.py  test_amp.txt  test_density.txt  trial.json
examples/protocol/: 490.err  send_1047.err  send_1214.err  send_1273.err  send_1274.err  send_1388.err  send_1390.err  send_1407.err  send_1437.err  send_583.err  send_586.err  send_595.err  send_597.err  send_600.err  send_618.err  send_619.err  send_821.err  send_822.err  send_823.err  send_926.err  send_928.err  send_929.err  send_931.err  send_932.err
libqdmmg/: .__init__.py.swp  __init__.py
libqdmmg/export/: __init__.py  density_plot.py  trial.json  wavefunction_json.py
libqdmmg/general/: .gaussian.py.swp  .wavepacket.py.swp  __init__.py  exceptions.py  gaussian.py  logger.py  potential.py  wavepacket.py
libqdmmg/gridchecks/: __init__.py  davidson.py  gridcheck.py  gridcheck.py.out  gridcheck.py.out.backup  gridcheck.sh  gridcheck_34723.err  gridcheck_34723.out  gridcheck_35149.err  gridcheck_35149.out
src/: __init__.py
(+84 files in other folders)
